--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "cdbreact": "^1.5.19",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-timezone-select": "^3.2.5",
+    "react-world-flags": "^1.6.0",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
