--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-flag-icon-css": "^1.0.25",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
