--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-world-flags": "^1.6.0",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
