--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dropzone": "^14.2.3",
     "react-flag-icon-css": "^1.0.25",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
