--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
     "cdbreact": "^1.5.19",
     "crypto-js": "^4.2.0",
     "lodash": "^4.17.21",
